--- a/WeatherZone/package.json
+++ b/WeatherZone/package.json
@@ -15,6 +15,7 @@
     "@mui/icons-material": "^5.16.0",
     "@mui/material": "^5.16.0",
     "@mui/x-charts": "^7.9.0",
+    "luxon": "^3.4.4",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.2.1",
